Trying to fix modular scale with spacing

--- a/css/screen.css
+++ b/css/screen.css
@@ -259,11 +259,16 @@ img {
 	}
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 960px){
 	img{
+		padding-top: 1.667em; /*16px*/
+		padding-bottom: 1.667em; /*16px*/
+	}
+}
+	/**img{
 			padding-top: 0.167em;
 			padding-bottom: 0.167em;
-	}
+	}*/
 
   p {
     margin-top: 0.500em;
